--- a/manifest.json
+++ b/manifest.json
@@ -23,6 +23,17 @@
     }
   ],
 
+  "background": {
+    "scripts": ["background.js"],
+    "persistent": false
+  },
+
+  "browser_action": {
+    "default_icon": "icons/icon-48.png",
+    "default_title": "Roblox Homepage Cleaner Options",
+    "default_popup": "options/options.html"
+  },
+
   "browser_specific_settings": {
     "gecko": {
       "id": "{16c22903-c58b-40bb-a42f-e3685b09cb67}"
