--- a/manifest.json
+++ b/manifest.json
@@ -10,7 +10,7 @@
     "48": "icons/icon-48.png"
   },
 
-  "permissions": ["activeTab", "storage"],
+  "permissions": ["storage"],
 
   "options_ui": {
     "page": "options/options.html"
