--- a/manifest.json
+++ b/manifest.json
@@ -1,5 +1,5 @@
 {
-  "manifest_version": 2,
+  "manifest_version": 3,
   "name": "Roblox Homepage Cleaner",
   "version": "1.0",
 
@@ -23,7 +23,7 @@
     }
   ],
 
-  "browser_action": {
+  "action": {
     "default_icon": "icons/icon-48.png",
     "default_title": "Roblox Homepage Cleaner Options",
     "default_popup": "options/options.html"
