Convert to manifest v3, chrome support

--- a/manifest.json
+++ b/manifest.json
@@ -1,7 +1,7 @@
 {
   "manifest_version": 3,
   "name": "Roblox Homepage Cleaner",
-  "version": "1.0",
+  "version": "1.1",
 
   "description": "Helps clean up the Roblox homepage by removing unwanted elements.",
   "homepage_url": "https://github.com/shadow-crafter/roblox-homepage-cleaner",
@@ -19,7 +19,7 @@
   "content_scripts": [
     {
       "matches": ["*://*.roblox.com/home"],
-      "js": ["content_scripts/homepage-cleaner.js"]
+      "js": ["storage-handler.js", "content_scripts/homepage-cleaner.js"]
     }
   ],
 
