--- a/manifest.json
+++ b/manifest.json
@@ -13,26 +13,26 @@
   "permissions": ["storage"],
 
   "options_ui": {
-    "page": "options/options.html"
+    "page": "src/options/options.html"
   },
 
   "background": {
     "scripts": ["background.js"],
-    "service_worker": "background.js",
+    "service_worker": "src/background/background.js",
     "type": "module"
   },
 
   "content_scripts": [
     {
       "matches": ["*://*.roblox.com/home"],
-      "js": ["content_scripts/homepage-cleaner.js"]
+      "js": ["src/content_scripts/homepage-cleaner.js"]
     }
   ],
 
   "action": {
     "default_icon": "icons/icon-48.png",
     "default_title": "Roblox Homepage Cleaner Options",
-    "default_popup": "options/options.html"
+    "default_popup": "src/options/options.html"
   },
 
   "browser_specific_settings": {
