Fix import and bad path for background script

--- a/manifest.json
+++ b/manifest.json
@@ -17,7 +17,7 @@
   },
 
   "background": {
-    "scripts": ["background.js"],
+    "scripts": ["src/background/background.js"],
     "service_worker": "src/background/background.js",
     "type": "module"
   },
